tests/snapshots/cli__kind_subdirectory.snap
---
source: tests/cli.rs
expression: check(stringify! (kind_subdirectory))
---
exit: 1
error[folder]: kind folder `functions` contains subdirectories
  --> src/features/auth/functions
   |
   | subdirectories: helpers
   |
   = kind folders hold files only

error[folder]: no pattern matched
  --> src/features/auth/functions/helpers/parse.py
   |
   | `functions` is a kind name, so it cannot also be a folder name
   |
   = tried: {root}/{folder1}/{folder2}/{folder3}/{kind}/{files}
            {root}/{folder1}/{folder2}/{kind}/{files}
            {root}/{folder1}/{kind}/{files}

checked 1 file -- 2 violations
