tests/snapshots/cli__long_constants_file.snap
---
source: tests/cli.rs
expression: check(stringify! (long_constants_file))
---
exit: 0
checked 1 file -- no violations
