tests/snapshots/cli__mixed_children.snap
---
source: tests/cli.rs
expression: check(stringify! (mixed_children))
---
exit: 1
error[folder]: `auth` mixes kind folders with ordinary folders
  --> src/features/auth
   |
   | kind folders: functions
   | other folders: session
   |
   = a directory's children must be all kinds or all folders
   = move the kind folders down into a sub-slice of their own, or flatten the folders back into this one

checked 2 files -- 1 violation
