tests/snapshots/cli__name_mismatch.snap
---
source: tests/cli.rs
expression: check(stringify! (name_mismatch))
---
exit: 1
error[naming]: file name does not match its export `class Credentials`
  --> src/features/auth/creds.py:1
   |
   = rename to credentials.py

checked 1 file -- 1 violation
