tests/snapshots/cli__new_type_in_types.snap
---
source: tests/cli.rs
expression: check(stringify! (new_type_in_types))
---
exit: 0
checked 1 file -- no violations
