tests/snapshots/cli__non_kind_folder.snap
---
source: tests/cli.rs
expression: check(stringify! (non_kind_folder))
---
exit: 1
error[folder]: no pattern matched
  --> src/features/auth/login/handlers/submit.py
   |
   | `handlers` is not a kind folder
   | expected one of: functions, types, constants
   |
   = tried: {root}/{folder1}/{folder2}/{folder3}/{kind}/{files}
            {root}/{folder1}/{folder2}/{kind}/{files}
            {root}/{folder1}/{kind}/{files}

checked 1 file -- 1 violation
