tests/snapshots/cli__overload.snap
---
source: tests/cli.rs
expression: check(stringify! (overload))
---
exit: 0
checked 1 file -- no violations
