tests/snapshots/cli__package_root.snap
---
source: tests/cli.rs
expression: check(stringify! (package_root))
---
exit: 0
checked 5 files -- no violations
