tests/snapshots/cli__pep695_alias.snap
---
source: tests/cli.rs
expression: check(stringify! (pep695_alias))
---
exit: 0
checked 1 file -- no violations
